--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="contenido"></section>
     </main>
     <footer>
-        <p>Maquetado en grupo en Adalab</p>
+        <p>Maquetado en grupo en <a href="http://adalab.es">ADALAB</a> </p>
     </footer>
 </body>
 </html>
