--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <header>
         <h1>Grupo nombre-de-grupo</h1>
+        <p>segunda rama</p>
     </header>
     <main>
         <section class="motivacion"></section>
