--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <p>segunda rama</p>
     </header>
     <main>
-        <section class="motivacion"></section>
-        <section class="contenido"></section>
+        <section class="motivacion">
+            <p>Hoy voy a conseguir todo lo que me proponga</p>
+        </section>
+        <section class="contenido">
+
+        </section>
     </main>
     <footer>
         <p>Maquetado en grupo en Adalab</p>
